--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,26 @@ appdirs==1.4.4
 asgiref==3.5.2
 astroid==2.11.7
 colorama==0.4.5
+deprecation==2.1.0
 dill==0.3.5.1
 distlib==0.3.5
 dj-database-url==1.0.0
 Django==4.0.6
 django-crispy-forms==1.14.0
+django-email-verification==0.3.1
 django-rename-app==0.1.3
+Django-Verify-Email==2.0.2
 filelock==3.7.1
 gunicorn==20.1.0
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
+packaging==21.3
 Pillow==9.2.0
 platformdirs==2.5.2
+PyJWT==2.4.0
 pylint==2.14.5
-psycopg2-binary==2.9.3
+pyparsing==3.0.9
 pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
