--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ mccabe==0.7.0
 packaging==21.3
 Pillow==9.2.0
 platformdirs==2.5.2
+psycopg2==2.9.3
 PyJWT==2.4.0
 pylint==2.14.5
 pyparsing==3.0.9
