--- a/requirements.txt
+++ b/requirements.txt
@@ -33,8 +33,8 @@ pylint==2.14.5
 pyparsing==3.0.9
 pypiwin32==223
 python-dateutil==2.8.2
-pytz==2022.1
-pywin32==304
+pytz
+pywin32
 PyYAML==5.4.1
 requests==2.26.0
 semantic-version==2.8.5
