--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ platformdirs==2.5.2
 PyJWT==2.4.0
 pylint==2.14.5
 pyparsing==3.0.9
+psycopg2-binary==2.9.3
 python-dateutil==2.8.2
 pytz
 PyYAML==5.4.1
