--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.5.2
 astroid==2.11.7
 awsebcli==3.20.3
 botocore==1.23.54
+boto3==1.21.3
+django-storages==1.12.3
 cement==2.8.2
 certifi==2022.9.24
 charset-normalizer==2.0.12
