--- a/.ebextensions/01_django.config
+++ b/.ebextensions/01_django.config
@@ -7,7 +7,7 @@ option_settings:
 
 container_commands:
   01_makemigrations:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
+    command: "source /var/app/venv/*/bin/activate && py manage.py makemigrations --noinput"
     leader_only: true
   02_migrate:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --noinput"
