--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,73 @@
 appdirs==1.4.4
 asgiref==3.5.2
 astroid==2.11.7
-awsebcli==3.20.3
-botocore==1.23.54
 boto3==1.20.54
-django-storages==1.12.3
+botocore==1.23.54
 cement==2.8.2
 certifi==2022.9.24
 charset-normalizer==2.0.12
-colorama==0.4.3
+colorama==0.4.6
 deprecation==2.1.0
 dill==0.3.5.1
 distlib==0.3.5
 dj-database-url==1.0.0
 Django==4.0.6
 django-bootstrap3==22.1
+django-cleanup==7.0.0
 django-crispy-forms==1.14.0
 django-rename-app==0.1.3
+django-storages==1.12.3
+djangorestframework==3.14.0
+ffmpeg-python==0.2.0
 filelock==3.7.1
 future==0.16.0
 gunicorn==20.1.0
 idna==3.4
 isort==5.10.1
+Jinja2==3.1.2
 jmespath==0.10.0
 lazy-object-proxy==1.7.1
+llvmlite==0.39.1
+MarkupSafe==2.1.2
 mccabe==0.7.0
+more-itertools==9.1.0
+mpmath==1.3.0
+networkx==3.1
+numba==0.56.4
+numpy==1.23.5
+openai-whisper==20230314
 packaging==21.3
 pathspec==0.9.0
 Pillow==9.2.0
 platformdirs==2.5.2
+psycopg2-binary==2.9.3
 PyJWT==2.4.0
 pylint==2.14.5
 pyparsing==3.0.9
-psycopg2-binary==2.9.3
 python-dateutil==2.8.2
-pytz
+pytz==2023.3
 PyYAML==5.4.1
+regex==2023.3.23
 requests==2.26.0
+s3transfer==0.5.2
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.2
 stripe==4.2.0
+sympy==1.11.1
 termcolor==1.1.0
+tiktoken==0.3.1
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.1
+torch==2.0.0
+torchaudio==2.0.1
+torchvision==0.15.1
+tqdm==4.65.0
+typing_extensions==4.5.0
 tzdata==2022.1
 urllib3==1.26.12
+virtualenv==20.23.0
 wcwidth==0.1.9
 whitenoise==6.2.0
 wrapt==1.14.1
