--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cement==2.8.2
 certifi==2022.9.24
 charset-normalizer==2.0.12
 colorama==0.4.6
+decorator==4.4.2
 deprecation==2.1.0
 dill==0.3.5.1
 distlib==0.3.5
@@ -23,6 +24,8 @@ filelock==3.7.1
 future==0.16.0
 gunicorn==20.1.0
 idna==3.4
+imageio==2.28.1
+imageio-ffmpeg==0.4.8
 isort==5.10.1
 Jinja2==3.1.2
 jmespath==0.10.0
@@ -31,6 +34,7 @@ llvmlite==0.39.1
 MarkupSafe==2.1.2
 mccabe==0.7.0
 more-itertools==9.1.0
+moviepy==1.0.3
 mpmath==1.3.0
 networkx==3.1
 numba==0.56.4
@@ -40,6 +44,7 @@ packaging==21.3
 pathspec==0.9.0
 Pillow==9.2.0
 platformdirs==2.5.2
+proglog==0.1.10
 psycopg2-binary==2.9.3
 PyJWT==2.4.0
 pylint==2.14.5
