--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,27 @@
-appdirs==1.4.4
-asgiref==3.5.2
-astroid==2.11.7
-boto3==1.20.54
-botocore==1.23.54
-cement==2.8.2
-certifi==2022.9.24
-charset-normalizer==2.0.12
+asgiref==3.7.2
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 colorama==0.4.6
 decorator==4.4.2
-deprecation==2.1.0
-dill==0.3.5.1
-distlib
-dj-database-url==1.0.0
-Django==4.0.6
-django-bootstrap3==22.1
-django-cleanup==7.0.0
-django-crispy-forms==1.14.0
-django-rename-app==0.1.3
-django-storages==1.12.3
-djangorestframework==3.14.0
-ffmpeg-python==0.2.0
-filelock==3.7.1
-future==0.16.0
-gunicorn==20.1.0
+dj-database-url==2.1.0
+Django==4.2.4
+django-bootstrap3==23.4
+django-cleanup==8.0.0
+django-crispy-forms==2.0
+django-storages==1.13.2
 idna==3.4
-imageio==2.28.1
+imageio==2.31.1
 imageio-ffmpeg==0.4.8
-isort==5.10.1
-Jinja2==3.1.2
-jmespath==0.10.0
-lazy-object-proxy==1.7.1
-llvmlite==0.39.1
-MarkupSafe==2.1.2
-mccabe==0.7.0
-more-itertools==9.1.0
 moviepy==1.0.3
-mpmath==1.3.0
-networkx==3.1
-numba==0.56.4
-numpy==1.23.5
-packaging==21.3
-pathspec==0.9.0
-Pillow==9.2.0
-platformdirs==2.5.2
+numpy==1.25.2
+Pillow==10.0.0
 proglog==0.1.10
-psycopg2-binary==2.9.3
-PyJWT==2.4.0
-pylint==2.14.5
-pyparsing==3.0.9
-python-dateutil==2.8.2
-PyYAML==5.4.1
-requests==2.26.0
-s3transfer==0.5.2
-semantic-version==2.8.5
-six==1.14.0
-sqlparse==0.4.2
-stripe==4.2.0
-sympy==1.11.1
-termcolor==1.1.0
-tiktoken==0.3.1
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.1
-tqdm==4.65.0
-typing_extensions==4.5.0
-tzdata==2022.1
-urllib3==1.26.12
-wcwidth==0.1.9
-whitenoise==6.2.0
-wrapt==1.14.1
+requests==2.31.0
+soupsieve==2.4.1
+sqlparse==0.4.4
+tqdm==4.66.1
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
+whitenoise==6.5.0
